--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
     color: rgb(80, 46, 46);
-    background-color: #61122f;
+    background-color: #cca8b5;
     font-family: 'Oxygen', sans-serif;
     font-size: 16px;
 }
 
 #header-nav {
-    background-color: rgb(245, 179, 25);
+    background-color: rgb(245, 204, 109);
     border-radius: 0;
     border: 0;
 }
@@ -36,10 +36,6 @@ body {
     margin-bottom: 0;
 }
 
-.navbar-brand h1:hover {
-    text-shadow: 1px 1px 1px rgb(247, 245, 245);
-}
-
 .navbar-brand a:hover, .navbar-brand a:focus {
     text-decoration: none;
 }
@@ -62,28 +58,23 @@ body {
 }
 
 #nav-list a:hover {
-    background: #E7E7E7;
-    border-radius: 15px;
+    transition: all ease .25s;
+    padding-bottom: 5px;
+    color: rgb(255, 255, 255);
 }
 
 #nav-list a span {
-    font-size: 1.8em;
     font-weight: bold;
 }
 
 #phone {
-    margin-top: 5px;
-}
-
-#phone a {
     text-align: right;
     margin-bottom: 0;
 }
 
-#phone div {
-    color: 557c3e;
-    text-align: right;
-    padding-right: 15px;
+.tel {
+    font-size: 1em;
+    font-weight: bold;
 }
 
 .navbar-header .navbar-toggle, 
@@ -99,12 +90,19 @@ body {
     font-size:30px;
 }
 
+.jumbotron{
+    background-image: url('/images/jumbotron.jpg');
+    background-size: cover;
+    background-position: center; 
+    width: 100%;
+    height: 700px;
+}
 
 
 @media (min-width: 1200px) {
-
-
+  
 }
+
 @media (min-width: 992px) and (max-width: 1199px){
 
 #logo-img {
@@ -112,11 +110,17 @@ body {
     height: 90px;
     margin: 10px 10px;
 }
+
+.jumbotron{
+    height: 595px;
+}
 }
 
 @media (min-width: 768px) and (max-width: 991px){
 
-
+.jumbotron{
+    height: 480px;
+}
 }
 
 @media (max-width: 768px) {
@@ -141,5 +145,9 @@ body {
 #collapsable-nav a span {
     font-size: 1em;
     margin-right: 10px;
+}
+
+.jumbotron{
+    height: 400px;
 }
 }
