--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,18 @@
 body {
     color: rgb(80, 46, 46);
-    background-color: #cca8b5;
+    background-color: rgba(97, 18, 47, .3);
     font-family: 'Oxygen', sans-serif;
     font-size: 16px;
 }
 
 header {
-    position: sticky;
     width: 100vw;
 }
 
-
 #header-nav {
-    background-color: rgb(245, 204, 109);
+    background-color: rgb(226, 243, 163);
     border-radius: 0;
-    border: 0;
+    border-bottom: 1px solid rgb(143, 141, 141);
 }
 
 #logo-img {
@@ -35,7 +33,7 @@ header {
 
 .navbar-brand h1 {
     color: #557c3e;
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: bold;
     text-shadow: 1px 1px 1px #222;
     margin-top: 0;
@@ -55,6 +53,11 @@ header {
 
 #nav-list {
     margin-top: 10px;
+}
+
+ul#nav-list {
+    margin-right: 0.1vw;
+    margin-top: 2vw;
 }
 
 #nav-list a {
@@ -93,8 +96,9 @@ header {
 }
 
 .glyphicon {
-    font-size:30px;
+    font-size:1.2em;
 }
+
 
 .jumbotron{
     background-image: url('../images/jumbotron.jpg');
@@ -102,7 +106,76 @@ header {
     background-position: center; 
     width: 100%;
     height: 700px;
+    border: 2px solid rgba(97, 18, 47, .5);
 }
+
+#menu-tile,
+#specials-tile,
+#map-tile {
+    height: 250px;
+    width: 100%;
+    margin-bottom: 15px;
+    position: relative;
+    border: 2px solid #f1abc5;
+    overflow: hidden;
+    z-index: 0;
+}
+
+#menu-tile:hover,
+#specials-tile:hover,
+#map-tile:hover {
+      box-shadow: 0 2px 8px 2px #6e6e6e;
+}
+
+#menu-tile {
+    background: url('../images/menu_3.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#specials-tile {
+    background: url('../images/specials_2.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#menu-tile span,
+#specials-tile span,
+#map-tile span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    opacity: 0.7;
+}
+
+.panel-footer {
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    /* background-color: #222; */
+    border-top: 0;
+}
+
+.panel-footer {
+    width: 100%;
+    background-color: rgb(226, 243, 163);
+}
+
+footer section {
+   text-align: center;
+}
+
+footer span {
+    font-weight: bold;
+}
+
 
 
 @media (min-width: 1200px) {
@@ -127,9 +200,17 @@ header {
 .jumbotron{
     height: 480px;
 }
+
+.navbar-brand h1 {
+    font-size: 1.8em;
 }
 
-@media (max-width: 768px) {
+nav#header-nav {
+    height: 130px;
+}
+}
+
+@media (max-width: 767px) {
 .navbar-brand {
     padding-top: 10px;
     height: 70px;
